[gd_scene load_steps=14 format=2]

[ext_resource path="res://data_canvas.gd" type="Script" id=1]
[ext_resource path="res://Gamer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://pause_button.png" type="Texture" id=3]
[ext_resource path="res://pause_button_pushed.png" type="Texture" id=4]
[ext_resource path="res://play_button.png" type="Texture" id=5]
[ext_resource path="res://play_button_pushed.png" type="Texture" id=6]
[ext_resource path="res://scene_transition_rect.tscn" type="PackedScene" id=7]
[ext_resource path="res://retry_button.png" type="Texture" id=8]
[ext_resource path="res://retry_button_pushed.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="data_canvas" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="title_score" type="Label" parent="."]
margin_left = 136.0
margin_top = 16.0
margin_right = 232.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.470588, 0, 0.533333, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "SCORE: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_label" type="Label" parent="."]
margin_left = 232.0
margin_top = 16.0
margin_right = 328.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title_best" type="Label" parent="."]
margin_left = 400.0
margin_top = 16.0
margin_right = 471.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.470588, 0, 0.533333, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 2
text = "BEST:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_score" type="Label" parent="."]
margin_left = 480.0
margin_top = 16.0
margin_right = 520.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_button" type="TextureButton" parent="."]
margin_left = 592.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_popup" type="Popup" parent="."]
pause_mode = 2
margin_left = 64.0
margin_top = 64.0
margin_right = 584.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pause_popup"]
margin_left = 200.0
margin_top = 24.0
margin_right = 308.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.729412, 0.27451, 0.890196, 1 )
custom_constants/shadow_offset_y = 2
text = "PAUSED"

[node name="unpause_button" type="TextureButton" parent="pause_popup"]
margin_left = 528.0
margin_top = -56.0
margin_right = 568.0
margin_bottom = -16.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry_button" type="TextureButton" parent="pause_popup"]
margin_left = 232.0
margin_top = 80.0
margin_right = 272.0
margin_bottom = 120.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scene_transition_rect" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="pause_popup/unpause_button" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="pause_popup/retry_button" to="." method="_on_retry_button_pressed"]
